# pokemon_dictionary

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py  models.py
src/api/: client.py  endpoints.py  parsers.py
src/battle/: damage.py  engine.py  models.py  room_manager.py  rules.py  state.py  type_chart.py
src/chatbot/: chat_session.py  query_handler.py  query_parser.py  response_formatter.py  rules.py
src/cli/: display.py  viewer.py
src/db/: connection.py  queries.py  repository.py  schema.py
src/export/: csv_export.py  json_export.py
src/scraper/: ability_scraper.py  evolution_backfill.py  image_downloader.py  pokemon_scraper.py  progress.py
src/web/: app.py  battle_routes.py  filters.py  helpers.py  routes.py  socket_events.py
src/web/templates/: base.html  detail.html  index.html
src/web/templates/battle/: arena.html  lobby.html  room.html
