[project]
name = "pokemon-scraper"
version = "1.0.0"
description = "Scrape Pokemon data from PokeAPI with Chinese names, stats, and images"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "tqdm>=4.66",
    "flask>=3.0",
]

[project.scripts]
pokemon-scraper = "src.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
